--- a/src/app/componentes/rkmain/addrka/addrka.component.scss
+++ b/src/app/componentes/rkmain/addrka/addrka.component.scss
@@ -1,74 +1,78 @@
-
-
-::-webkit-input-placeholder { /* Safari y Chrome */
-   color:  rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important; 
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
- 
-:-moz-placeholder { /* Firefox hasta v18 */
-   color: rgb(17, 7, 7); 
-   text-align: left ;
-   text-decoration: underline;
-   margin-left: 30px !important;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}  
- 
-::-moz-placeholder {  /* Firefox 19+ */
-   color: rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
- 
-:-ms-input-placeholder {  /* IE 10+´*/
-   color: rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+::-webkit-input-placeholder {
+    /* Safari y Chrome */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
-h4{
-   font-family:'collahuasi';
+:-moz-placeholder {
+    /* Firefox hasta v18 */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+:-ms-input-placeholder {
+    /* IE 10+´*/
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+h4 {
+    font-family: 'collahuasi';
 }
 
 .mat-input-element {
-
-   font: inherit;
-   background: 0 0;
-   color: currentColor;
-   border: 1px solid black;
-   outline: 0;
-   padding: 0;
-   margin: 0;
-   width: 100%;
-   max-width: 100%;
-   vertical-align: bottom;
-   text-align: left;
-   padding-left: 10px;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font: inherit;
+    background: 0 0;
+    color: currentColor;
+    border: 1px solid black;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+    vertical-align: bottom;
+    text-align: left;
+    padding-left: 10px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
+.mat-select-search-inside-mat-option,
+.mat-dialog-actions {
+    height: 50px !important;
+}
 
+h1 {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
 
- h1{
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
- }
+mat-label {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
 
- mat-label{
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
- }
- .mat-dialog-actions {
-   // ...
-   &[align='end'] {
-     justify-content: flex-end;
-   }
- 
-   &[align='center'] {
-     justify-content: center;
-   }
- }
+.mat-dialog-actions {
+    // ...
+    &[align='end'] {
+        justify-content: flex-end;
+    }
+    &[align='center'] {
+        justify-content: center;
+    }
+}
