--- a/src/app/componentes/rkmain/addrky/addrky.component.html
+++ b/src/app/componentes/rkmain/addrky/addrky.component.html
@@ -6,7 +6,10 @@
                 <!-- <mat-label>Seleccione una Consecuencia</mat-label> -->
                 <mat-select [formControl]="consecuenciaControl" placeholder="Seleccione una Consecuencia" required [(ngModel)]="consecuenciaModel.consecuenciaId" #consecuenciaId multiple>
                     <!-- <input  matInput   id='busqueda '  style="height: 18px;"   (keydown)="Buscar($event)" type="text" [(ngModel)]="consecuenciaModel.name" name='name' value={{consecuenciaModel.name}} placeholder="search"> -->
-                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+                    <mat-option style="height: 50px !important;">
+
+                        <ngx-mat-select-search [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+                    </mat-option>
 
                     <mat-option *ngFor="let item of consecuenciasList|filterPipe:descripcion" [value]="item.Id">{{item.Descripcion}}</mat-option>
                 </mat-select>
