--- a/src/app/componentes/rkmain/rkporaprobar/rkporaprobar.component.html
+++ b/src/app/componentes/rkmain/rkporaprobar/rkporaprobar.component.html
@@ -2,7 +2,7 @@
 
     {{ data.title }} </h3>
 
-<mat-dialog-content>
+<mat-dialog-content cdkDrag cdkDragRootElement=".cdk-overlay-pane">
     <div class="box box-default table-box mdl-shadow--2dp">
 
         <div>
@@ -51,7 +51,14 @@
             <tbody>
                 <tr *ngFor="let item of pendList">
                     <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
+                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                        <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
+    
+                            </ng-template>
+                            <ng-template #PadreMayor>
+                                <input readonly type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
+    
+                            </ng-template> -->
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Accion}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Comentarios}}</td>
