--- a/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
+++ b/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
@@ -1,7 +1,7 @@
 <h3 mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
 
     {{ data.title }} </h3>
-<mat-dialog-content>
+<mat-dialog-content cdkDrag cdkDragRootElement=".cdk-overlay-pane">
     <div class="box box-default table-box mdl-shadow--2dp">
 
         <div>
@@ -11,10 +11,10 @@
             <input type="date" placeholder="Fecha Hasta" [(ngModel)]='FechaHasta' name="FechaHasta" required>Fecha Hasta
 
             <button *ngIf="FechaDesde ==='' || FechaHasta=== ''; else BotonActivado" (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons" disabled>
-                    search</button>
+                        search</button>
             <ng-template #BotonActivado>
                 <button (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons">
-                            search</button>
+                                search</button>
             </ng-template>
         </div>
         <!-- <p>{{TotalRegistros}}</p> -->
@@ -50,7 +50,14 @@
             <tbody>
                 <tr *ngFor="let item of pendList">
                     <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
+                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                        <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
+        
+                                </ng-template>
+                                <ng-template #PadreMayor>
+                                    <input readonly type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
+        
+                                </ng-template> -->
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Accion}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Comentarios}}</td>
@@ -68,7 +75,7 @@
                     </ng-template>
 
                     <td class="mdl-data-table__cell--non-numeric"><a routerLink="" reload='true' (click)='verTable(item.key)'>
-                            {{item.Descripcion}}  </a></td>
+                                {{item.Descripcion}}  </a></td>
 
                     <td class="mdl-data-table__cell--non-numeric">{{item.Area}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Proceso}}</td>
