--- a/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
+++ b/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
@@ -11,10 +11,10 @@
             <input type="date" placeholder="Fecha Hasta" [(ngModel)]='FechaHasta' name="FechaHasta" required>Fecha Hasta
 
             <button *ngIf="FechaDesde ==='' || FechaHasta=== ''; else BotonActivado" (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons" disabled>
-                        search</button>
+                    search</button>
             <ng-template #BotonActivado>
                 <button (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons">
-                                search</button>
+                            search</button>
             </ng-template>
         </div>
         <!-- <p>{{TotalRegistros}}</p> -->
@@ -50,14 +50,16 @@
             <tbody>
                 <tr *ngFor="let item of pendList">
                     <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="item.permiso" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="!item.permiso && !item.check" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check" id="SinPermisos" disabled="disabled">
+
                         <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
-        
-                                </ng-template>
-                                <ng-template #PadreMayor>
-                                    <input readonly type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
-        
-                                </ng-template> -->
+    
+                            </ng-template>
+                            <ng-template #PadreMayor>
+                                <input readonly type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" [value]="item.check" [(ngModel)]="item.check">
+    
+                            </ng-template> -->
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Accion}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Comentarios}}</td>
@@ -75,7 +77,7 @@
                     </ng-template>
 
                     <td class="mdl-data-table__cell--non-numeric"><a routerLink="" reload='true' (click)='verTable(item.key)'>
-                                {{item.Descripcion}}  </a></td>
+                            {{item.Descripcion}}  </a></td>
 
                     <td class="mdl-data-table__cell--non-numeric">{{item.Area}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Proceso}}</td>
