--- a/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -1,11 +1,9 @@
 <h6 class="article-title">Area > Proceso</h6>
 <div class="col-xl-12 text-right" align="end" [ngSwitch]="procesoModel.procesoStatus ">
 
-
     <div *ngSwitchCase="'CREADO'">
 
-        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === validacionaprobacion && permisoValidar|| btn === creacionvalidacion && permisoValidar || btn ===  validacion && permisoValidar || btn === creacionaprobacion && permisoValidar "
-            align="end" cdkDragHandle>
+        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === creacionvalidacion && permisoValidar  || btn === creacionaprobacion && permisoValidar " align="end" cdkDragHandle>
             <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
         </mat-dialog-actions>
     </div>
@@ -20,8 +18,8 @@
 
     <div *ngSwitchCase="'MODIFICADO'">
 
-        <mat-dialog-actions *ngIf="btn === creacion  && permisoValidar|| btn === administrador  && permisoValidar|| btn === validacionaprobacion && permisoValidar|| btn === creacionvalidacion && permisoValidar || btn ===  validacion && permisoValidar || btn === creacionaprobacion && permisoValidar "
-            align="end" cdkDragHandle>
+
+        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === creacionvalidacion && permisoValidar  || btn === creacionaprobacion && permisoValidar " align="end" cdkDragHandle>
             <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
         </mat-dialog-actions>
     </div>
@@ -64,6 +62,7 @@
             <button *ngIf="btn === aprobacion  && permisoValidar|| btn === validacionaprobacion  && permisoValidar || btn === creacionaprobacion && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
         </mat-dialog-actions>
     </div>
+
 
 </div>
 <br>
