--- a/src/app/componentes/rkmain/rkpend/rkpend.component.html
+++ b/src/app/componentes/rkmain/rkpend/rkpend.component.html
@@ -51,7 +51,9 @@
             <tbody>
                 <tr *ngFor="let item of pendList">
                     <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="item.permiso" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="!item.permiso && !item.check" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check" id="SinPermisos" disabled="disabled">
+
                         <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
 
                         </ng-template>
@@ -98,7 +100,7 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end" cdkDragHandle>
     <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
-    <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion  || btn ===  creacionaprobacion" mat-raised-button color="accent" (click)="consola()">Enviar a Validar</button>
+    <button *ngIf="btn === creacion || btn === administrador || btn === creacionvalidacion  || btn ===  creacionaprobacion" mat-raised-button color="accent" (click)="consola()">Enviar a Validar</button>
 
 
 
