--- a/src/app/componentes/rkmain/rkpend/rkpend.component.scss
+++ b/src/app/componentes/rkmain/rkpend/rkpend.component.scss
@@ -13,6 +13,10 @@
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
+#SinPermisos {
+    cursor: not-allowed;
+}
+
 .mdl-data-table tbody tr {
     font-size: 10px;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
