--- a/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
+++ b/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
@@ -51,7 +51,9 @@
             <tbody>
                 <tr *ngFor="let item of pendList">
                     <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="item.permiso" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check">
+                        <input *ngIf="!item.permiso && !item.check" type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.check)" [value]="item.check" [(ngModel)]="item.check" id="SinPermisos" disabled="disabled">
+
                         <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
     
                             </ng-template>
